// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLeadBlock tests should not render technical Specification tab 1`] = `
<div>
  <div
    class="sdpTabLeadBlock css-jnrlck"
    data-testid="tabs"
  >
    <div
      class="Tabs-tabsBar"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-3rblw7-MuiContainer-root"
        >
          <div
            class="MuiTabs-root css-7cgbzd-MuiTabs-root"
          >
            <div
              class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons MuiTabs-scrollButtonsHideMobile tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="KeyboardArrowLeftIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
            <div
              class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-agdkjh-MuiTabs-scrollbarSize"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-one"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected Tabs-tabRoot css-15jz8p0-MuiButtonBase-root-MuiTab-root"
                  data-gtm="{\\"id\\":\\"selector-tabs4\\",\\"label\\":\\"MC: sdp.leadBlock.about\\",\\"action\\":\\"Selector – Tabs\\"}"
                  data-testid="tab-one"
                  id="tab-one"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  MC: sdp.leadBlock.about
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="MuiTabs-indicator css-tv859c-MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
            <div
              class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons MuiTabs-scrollButtonsHideMobile tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="KeyboardArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-one"
      class="MuiGrid-root MuiGrid-item Tabs-tabPanel css-j7mgek-MuiGrid-root"
      data-testid="tabpanel-one"
      heading="MC: sdp.leadBlock.about"
      id="tabpanel-one"
      role="tabpanel"
    >
      <div
        class="Tabs-tabPanelBox MuiBox-root css-19kzrtu"
      >
        <div
          class="section Section-root Section-white css-cxq310"
        >
          <div
            class=" css-ze8cyt"
          >
            <div
              class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1ti04yy-MuiGrid-root"
                data-testid="grid"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8 css-3mvoze-MuiGrid-root"
                  data-testid="grid-item"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
                    data-testid="typography"
                  >
                    <div
                      class="MuiTypography-root MuiTypography-body1  css-87ejlm-MuiTypography-root"
                      data-testid="typography"
                    >
                      system-desc
                    </div>
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 AboutLeadBlock-guaranteesAndAwardsAsset css-131kag5-MuiTypography-root"
                    data-testid="typography"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
                      data-testid="guarentees-section"
                    >
                      MC: pdp.leadBlock.guaranteesWarranties
                    </h6>
                    <img
                      alt="asset-name"
                      class="image"
                      src="http://localhost:8000/asset-real-file-name.pdf"
                    />
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 AboutLeadBlock-guaranteesAndAwardsAsset css-131kag5-MuiTypography-root"
                    data-testid="typography"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
                      data-testid="awards-section"
                    >
                      MC: pdp.leadBlock.awardsCertificates
                    </h6>
                    <img
                      alt="asset-name"
                      class="image"
                      src="http://localhost:8000/asset-real-file-name.pdf"
                    />
                    <img
                      alt="asset-name"
                      class="image"
                      src="http://localhost:8000/asset-real-file-name.pdf"
                    />
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
                    data-testid="typography"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
                      data-testid="specification-section"
                    >
                      MC: sdp.leadBlock.specification
                    </h6>
                    <a
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
                      href="http://localhost:8000/asset-real-file-name.pdf"
                      rel="noopener noreferrer"
                      tabindex="0"
                      target="_blank"
                    >
                      asset-name
                      <span
                        class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="LaunchIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4 Grid-item css-5ynyu1-MuiGrid-root"
                  data-testid="sidebar"
                >
                  <div
                    class="ColorPair-pearl css-1pt14k0"
                  >
                    <div
                      class="css-qtgtj9"
                    >
                      <div
                        class="css-wepxue"
                      >
                        <h4
                          class="MuiTypography-root MuiTypography-h4 Typography-underline css-1ekntu4-MuiTypography-root"
                          data-testid="typography"
                        >
                          MC: sdp.leadBlock.systemBenefits
                        </h4>
                        <div
                          class="css-1xaekgw"
                        >
                          <ul
                            class="css-1err4t"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabLeadBlock tests should render 1`] = `
<div>
  <div
    class="sdpTabLeadBlock css-jnrlck"
    data-testid="tabs"
  >
    <div
      class="Tabs-tabsBar"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-3rblw7-MuiContainer-root"
        >
          <div
            class="MuiTabs-root css-7cgbzd-MuiTabs-root"
          >
            <div
              class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons MuiTabs-scrollButtonsHideMobile tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="KeyboardArrowLeftIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
            <div
              class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-agdkjh-MuiTabs-scrollbarSize"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-one"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected Tabs-tabRoot css-15jz8p0-MuiButtonBase-root-MuiTab-root"
                  data-gtm="{\\"id\\":\\"selector-tabs4\\",\\"label\\":\\"MC: sdp.leadBlock.about\\",\\"action\\":\\"Selector – Tabs\\"}"
                  data-testid="tab-one"
                  id="tab-one"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  MC: sdp.leadBlock.about
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-two"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-tabRoot css-15jz8p0-MuiButtonBase-root-MuiTab-root"
                  data-gtm="{\\"id\\":\\"selector-tabs4\\",\\"label\\":\\"MC: sdp.leadBlock.technicalSpecification\\",\\"action\\":\\"Selector – Tabs\\"}"
                  data-testid="tab-two"
                  id="tab-two"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  MC: sdp.leadBlock.technicalSpecification
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-three"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-tabRoot css-15jz8p0-MuiButtonBase-root-MuiTab-root"
                  data-gtm="{\\"id\\":\\"selector-tabs4\\",\\"label\\":\\"MC: sdp.leadBlock.documentsAndDownloads\\",\\"action\\":\\"Selector – Tabs\\"}"
                  data-testid="tab-three"
                  id="tab-three"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  MC: sdp.leadBlock.documentsAndDownloads
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="MuiTabs-indicator css-tv859c-MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
            <div
              class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons MuiTabs-scrollButtonsHideMobile tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="KeyboardArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-one"
      class="MuiGrid-root MuiGrid-item Tabs-tabPanel css-j7mgek-MuiGrid-root"
      data-testid="tabpanel-one"
      heading="MC: sdp.leadBlock.about"
      id="tabpanel-one"
      role="tabpanel"
    >
      <div
        class="Tabs-tabPanelBox MuiBox-root css-19kzrtu"
      >
        <div
          class="section Section-root Section-white css-cxq310"
        >
          <div
            class=" css-ze8cyt"
          >
            <div
              class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1ti04yy-MuiGrid-root"
                data-testid="grid"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8 css-3mvoze-MuiGrid-root"
                  data-testid="grid-item"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
                    data-testid="typography"
                  >
                    <div
                      class="MuiTypography-root MuiTypography-body1  css-87ejlm-MuiTypography-root"
                      data-testid="typography"
                    >
                      system-desc
                    </div>
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 AboutLeadBlock-guaranteesAndAwardsAsset css-131kag5-MuiTypography-root"
                    data-testid="typography"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
                      data-testid="guarentees-section"
                    >
                      MC: pdp.leadBlock.guaranteesWarranties
                    </h6>
                    <img
                      alt="asset-name"
                      class="image"
                      src="http://localhost:8000/asset-real-file-name.pdf"
                    />
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 AboutLeadBlock-guaranteesAndAwardsAsset css-131kag5-MuiTypography-root"
                    data-testid="typography"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
                      data-testid="awards-section"
                    >
                      MC: pdp.leadBlock.awardsCertificates
                    </h6>
                    <img
                      alt="asset-name"
                      class="image"
                      src="http://localhost:8000/asset-real-file-name.pdf"
                    />
                    <img
                      alt="asset-name"
                      class="image"
                      src="http://localhost:8000/asset-real-file-name.pdf"
                    />
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
                    data-testid="typography"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
                      data-testid="specification-section"
                    >
                      MC: sdp.leadBlock.specification
                    </h6>
                    <a
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
                      href="http://localhost:8000/asset-real-file-name.pdf"
                      rel="noopener noreferrer"
                      tabindex="0"
                      target="_blank"
                    >
                      asset-name
                      <span
                        class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="LaunchIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4 Grid-item css-5ynyu1-MuiGrid-root"
                  data-testid="sidebar"
                >
                  <div
                    class="ColorPair-pearl css-1pt14k0"
                  >
                    <div
                      class="css-qtgtj9"
                    >
                      <div
                        class="css-wepxue"
                      >
                        <h4
                          class="MuiTypography-root MuiTypography-h4 Typography-underline css-1ekntu4-MuiTypography-root"
                          data-testid="typography"
                        >
                          MC: sdp.leadBlock.systemBenefits
                        </h4>
                        <div
                          class="css-1xaekgw"
                        >
                          <ul
                            class="css-1err4t"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-two"
      class="MuiGrid-root MuiGrid-item Tabs-tabPanel css-j7mgek-MuiGrid-root"
      data-testid="tabpanel-two"
      heading="MC: sdp.leadBlock.technicalSpecification"
      hidden=""
      id="tabpanel-two"
      role="tabpanel"
    >
      <div
        class="Tabs-tabPanelBox MuiBox-root css-19kzrtu"
      >
        <div
          class="section Section-root Section-white css-cxq310"
        >
          <div
            class=" css-ze8cyt"
          >
            <div
              class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1kfapdf-MuiGrid-root"
                data-testid="grid"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8 css-3mvoze-MuiGrid-root"
                  data-testid="grid-item"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
                    data-testid="typography"
                  >
                    <div
                      class="SystemDetailsTechnicalSpec"
                    >
                      <div
                        class="css-46e850"
                      >
                        <table
                          class="MuiTable-root Table-evenColor css-wsrw3a-MuiTable-root"
                          data-testid="table"
                        >
                          <thead
                            class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
                            data-testid="table-head"
                          >
                            <tr
                              class="MuiTableRow-root MuiTableRow-head css-47w8l6-MuiTableRow-root"
                            >
                              <th
                                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                                scope="col"
                              >
                                appearanceAttributes
                              </th>
                              <th
                                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                                scope="col"
                              />
                            </tr>
                          </thead>
                          <tbody
                            class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                          >
                            <tr
                              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
                            >
                              <td
                                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
                              >
                                classification-feature-name
                              </td>
                              <td
                                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
                              >
                                classification-feature-value
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-three"
      class="MuiGrid-root MuiGrid-item Tabs-tabPanel css-j7mgek-MuiGrid-root"
      data-testid="tabpanel-three"
      heading="MC: sdp.leadBlock.documentsAndDownloads"
      hidden=""
      id="tabpanel-three"
      role="tabpanel"
    >
      <div
        class="Tabs-tabPanelBox MuiBox-root css-19kzrtu"
      >
        <div
          class="section Section-root Section-white css-cxq310"
        >
          <div
            class=" css-ze8cyt"
          >
            <div
              class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
            >
              <div
                class="css-wepxue"
              >
                <div
                  class="css-1xaekgw"
                >
                  <div>
                    <div
                      class="tableContainer"
                    >
                      <div
                        class="DocumentSimpleTableResults css-1iwuinm"
                      >
                        <div
                          class="css-46e850"
                        >
                          <table
                            class="MuiTable-root Table-rowNoColor css-wsrw3a-MuiTable-root"
                            data-testid="table"
                          >
                            <thead
                              class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
                              data-testid="table-head"
                            >
                              <tr
                                class="MuiTableRow-root MuiTableRow-head css-47w8l6-MuiTableRow-root"
                              >
                                <th
                                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                                  scope="col"
                                >
                                  MC: documentLibrary.headers.type
                                </th>
                                <th
                                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                                  scope="col"
                                >
                                  MC: documentLibrary.headers.title
                                </th>
                                <th
                                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium documentSimpleTableResultsStyles-tableHeader css-1tbee56-MuiTableCell-root"
                                  scope="col"
                                >
                                  MC: documentLibrary.headers.download
                                </th>
                                <th
                                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium documentSimpleTableResultsStyles-tableHeader css-1tbee56-MuiTableCell-root"
                                  scope="col"
                                >
                                  MC: documentLibrary.headers.add
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root row css-xy5ytf-MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1rf00xl-MuiTableCell-root"
                                >
                                  asset-name
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1rf00xl-MuiTableCell-root"
                                >
                                  <p>
                                    pim-link-document-title
                                  </p>
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1rf00xl-MuiTableCell-root"
                                >
                                  <a
                                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
                                    data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost/pim-link-document-id\\"}"
                                    href="http://localhost/pim-link-document-id"
                                    rel="noopener noreferrer"
                                    tabindex="0"
                                    target="_blank"
                                  >
                                    <span
                                      class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                                    >
                                      <svg
                                        class="download-icon css-x3wokz"
                                        viewBox="0 0 32 32"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M0 0h32v32H0z"
                                          fill="none"
                                        />
                                        <path
                                          d="M21 2H8v28h21V10Z"
                                          fill="#aeb1b1"
                                        />
                                        <path
                                          d="M9 29V3h12v7h7v19Z"
                                          fill="#fff"
                                        />
                                        <rect
                                          fill="#d43533"
                                          height="10"
                                          rx="1"
                                          width="21"
                                          x="3"
                                          y="15"
                                        />
                                        <g
                                          fill="#fff"
                                        >
                                          <path
                                            d="M6 23v-6h1.944c.737 0 2.556.132 2.556 2 0 1.9-1.95 2-2.5 2H7v2Zm1-5v2h.874c.672 0 1.474-.121 1.474-1 0-.814-.7-1-1.551-1ZM11 17h2.214A2.838 2.838 0 0 1 16 19.885V20a2.8 2.8 0 0 1-2.592 2.994.914.914 0 0 0-.128.006H11Zm1 1v4h1.116a1.757 1.757 0 0 0 1.9-1.602v-.004A1.729 1.729 0 0 0 15 20c0-1.628-1.222-2-2.244-2ZM17 23v-6h4v1h-3v1.5h2.5v1H18V23Z"
                                          />
                                        </g>
                                      </svg>
                                    </span>
                                    10 B
                                    <span
                                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                                    />
                                  </a>
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1igsm02-MuiTableCell-root"
                                >
                                  <span
                                    aria-label="MC: documents.download.maxReached"
                                    class=""
                                    data-mui-internal-clone-element="true"
                                  >
                                    <div
                                      class="MuiFormControl-root css-pqkqag-MuiFormControl-root"
                                    >
                                      <label
                                        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                                      >
                                        <span
                                          class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                                        >
                                          <input
                                            aria-label="MC: documentLibrary.download pim-link-document-title"
                                            class="PrivateSwitchBase-input css-1m9pwf3"
                                            data-indeterminate="false"
                                            name="pim-link-document-id-pim-link-document-title"
                                            type="checkbox"
                                          />
                                          <svg
                                            aria-hidden="true"
                                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                            data-testid="CheckBoxOutlineBlankIcon"
                                            focusable="false"
                                            viewBox="0 0 24 24"
                                          >
                                            <path
                                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                            />
                                          </svg>
                                          <span
                                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                                          />
                                        </span>
                                      </label>
                                    </div>
                                  </span>
                                </td>
                              </tr>
                              <tr
                                class="MuiTableRow-root row css-xy5ytf-MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1rf00xl-MuiTableCell-root"
                                >
                                  asset-name
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1rf00xl-MuiTableCell-root"
                                >
                                  <p>
                                    pim-link-document-title
                                  </p>
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1rf00xl-MuiTableCell-root"
                                >
                                  <a
                                    class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-medium Button-text MuiIconButton-sizeLarge css-142qa0u-MuiButtonBase-root-MuiIconButton-root"
                                    href="http://localhost/pim-link-document-id"
                                    rel="noopener noreferrer"
                                    tabindex="0"
                                    target="_blank"
                                  >
                                    <svg
                                      class="css-154ktap"
                                      viewBox="0 0 32 32"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M28 2H10l-8 8v18a2.006 2.006 0 0 0 2 2h24a2.006 2.006 0 0 0 2-2V4a2.006 2.006 0 0 0-2-2Zm-4.12 8.54-6.96 6.96-2.41-2.41 6.96-6.96L18.34 5l8.65.01.01 8.65Z"
                                      />
                                    </svg>
                                    <span
                                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                                    />
                                  </a>
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1igsm02-MuiTableCell-root"
                                >
                                  <span
                                    class="css-1ytj21s"
                                  >
                                    -
                                  </span>
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                    <div
                      class="DocumentResultsFooter"
                    >
                      <nav
                        aria-label="pagination navigation"
                        class="MuiPagination-root MuiPagination-text pagination docResultsFooterStyles-paginationRoot css-ys6i0r-MuiPagination-root"
                      >
                        <ul
                          class="MuiPagination-ul css-wjh20t-MuiPagination-ul"
                        >
                          <li>
                            <button
                              aria-label="Go to previous page"
                              class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-textPrimary Mui-disabled MuiPaginationItem-previousNext Pagination-root css-pwj54n-MuiButtonBase-root-MuiPaginationItem-root"
                              disabled=""
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-g2z002-MuiSvgIcon-root-MuiPaginationItem-icon"
                                data-testid="NavigateBeforeIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                                />
                              </svg>
                            </button>
                          </li>
                          <li>
                            <button
                              aria-current="true"
                              aria-label="page 1"
                              class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-textPrimary Mui-selected MuiPaginationItem-page Pagination-root css-pwj54n-MuiButtonBase-root-MuiPaginationItem-root"
                              tabindex="0"
                              type="button"
                            >
                              1
                              <span
                                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                              />
                            </button>
                          </li>
                          <li>
                            <button
                              aria-label="Go to next page"
                              class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-textPrimary Mui-disabled MuiPaginationItem-previousNext Pagination-root css-pwj54n-MuiButtonBase-root-MuiPaginationItem-root"
                              disabled=""
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-g2z002-MuiSvgIcon-root-MuiPaginationItem-icon"
                                data-testid="NavigateNextIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                                />
                              </svg>
                            </button>
                          </li>
                        </ul>
                      </nav>
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways clear-downloads Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
                        data-testid="anchor-link"
                        type="button"
                      >
                        <span>
                          MC: downloadList.clear
                        </span>
                      </a>
                      <button
                        class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-11nrv4h-MuiButtonBase-root-MuiButton-root"
                        data-gtm="{\\"id\\":\\"download3-button1\\",\\"label\\":\\"MC: downloadList.download (0)\\",\\"action\\":\\"[]\\"}"
                        tabindex="0"
                        type="button"
                      >
                        MC: downloadList.download (0)
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <p
                        class="MuiTypography-root MuiTypography-body1 RecaptchaPrivacyLinks css-87ejlm-MuiTypography-root"
                        data-testid="typography"
                      >
                        This site is protected by reCAPTCHA and the Google 
                        <a
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
                          data-testid="anchor-link"
                          href="https://policies.google.com/privacy"
                          rel="noreferrer noopener"
                          target="_blank"
                        >
                          <span>
                            Privacy Policy
                          </span>
                        </a>
                         and 
                        <a
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
                          data-testid="anchor-link"
                          href="https://policies.google.com/terms"
                          rel="noreferrer noopener"
                          target="_blank"
                        >
                          <span>
                            Terms of Service
                          </span>
                        </a>
                         apply.
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabLeadBlock tests should render documents and downloads 1`] = `
<div
  aria-labelledby="tab-three"
  class="MuiGrid-root MuiGrid-item Tabs-tabPanel css-j7mgek-MuiGrid-root"
  data-testid="tabpanel-three"
  heading="MC: sdp.leadBlock.documentsAndDownloads"
  hidden=""
  id="tabpanel-three"
  role="tabpanel"
>
  <div
    class="Tabs-tabPanelBox MuiBox-root css-19kzrtu"
  >
    <div
      class="section Section-root Section-white css-cxq310"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
        >
          <div
            class="css-wepxue"
          >
            <div
              class="css-1xaekgw"
            >
              <div>
                <div
                  class="tableContainer"
                >
                  <div
                    class="DocumentSimpleTableResults css-1iwuinm"
                  >
                    <div
                      class="css-46e850"
                    >
                      <table
                        class="MuiTable-root Table-rowNoColor css-wsrw3a-MuiTable-root"
                        data-testid="table"
                      >
                        <thead
                          class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
                          data-testid="table-head"
                        >
                          <tr
                            class="MuiTableRow-root MuiTableRow-head css-47w8l6-MuiTableRow-root"
                          >
                            <th
                              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                              scope="col"
                            >
                              MC: documentLibrary.headers.type
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                              scope="col"
                            >
                              MC: documentLibrary.headers.title
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium documentSimpleTableResultsStyles-tableHeader css-1tbee56-MuiTableCell-root"
                              scope="col"
                            >
                              MC: documentLibrary.headers.download
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium documentSimpleTableResultsStyles-tableHeader css-1tbee56-MuiTableCell-root"
                              scope="col"
                            >
                              MC: documentLibrary.headers.add
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                        >
                          <tr
                            class="MuiTableRow-root row css-xy5ytf-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1rf00xl-MuiTableCell-root"
                            >
                              asset-name
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1rf00xl-MuiTableCell-root"
                            >
                              <p>
                                pim-link-document-title
                              </p>
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1rf00xl-MuiTableCell-root"
                            >
                              <a
                                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
                                data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost/pim-link-document-id\\"}"
                                href="http://localhost/pim-link-document-id"
                                rel="noopener noreferrer"
                                tabindex="0"
                                target="_blank"
                              >
                                <span
                                  class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                                >
                                  <svg
                                    class="download-icon css-x3wokz"
                                    viewBox="0 0 32 32"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M0 0h32v32H0z"
                                      fill="none"
                                    />
                                    <path
                                      d="M21 2H8v28h21V10Z"
                                      fill="#aeb1b1"
                                    />
                                    <path
                                      d="M9 29V3h12v7h7v19Z"
                                      fill="#fff"
                                    />
                                    <rect
                                      fill="#d43533"
                                      height="10"
                                      rx="1"
                                      width="21"
                                      x="3"
                                      y="15"
                                    />
                                    <g
                                      fill="#fff"
                                    >
                                      <path
                                        d="M6 23v-6h1.944c.737 0 2.556.132 2.556 2 0 1.9-1.95 2-2.5 2H7v2Zm1-5v2h.874c.672 0 1.474-.121 1.474-1 0-.814-.7-1-1.551-1ZM11 17h2.214A2.838 2.838 0 0 1 16 19.885V20a2.8 2.8 0 0 1-2.592 2.994.914.914 0 0 0-.128.006H11Zm1 1v4h1.116a1.757 1.757 0 0 0 1.9-1.602v-.004A1.729 1.729 0 0 0 15 20c0-1.628-1.222-2-2.244-2ZM17 23v-6h4v1h-3v1.5h2.5v1H18V23Z"
                                      />
                                    </g>
                                  </svg>
                                </span>
                                10 B
                                <span
                                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                                />
                              </a>
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1igsm02-MuiTableCell-root"
                            >
                              <span
                                aria-label="MC: documents.download.maxReached"
                                class=""
                                data-mui-internal-clone-element="true"
                              >
                                <div
                                  class="MuiFormControl-root css-pqkqag-MuiFormControl-root"
                                >
                                  <label
                                    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                                  >
                                    <span
                                      class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                                    >
                                      <input
                                        aria-label="MC: documentLibrary.download pim-link-document-title"
                                        class="PrivateSwitchBase-input css-1m9pwf3"
                                        data-indeterminate="false"
                                        name="pim-link-document-id-pim-link-document-title"
                                        type="checkbox"
                                      />
                                      <svg
                                        aria-hidden="true"
                                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                        data-testid="CheckBoxOutlineBlankIcon"
                                        focusable="false"
                                        viewBox="0 0 24 24"
                                      >
                                        <path
                                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                        />
                                      </svg>
                                      <span
                                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                                      />
                                    </span>
                                  </label>
                                </div>
                              </span>
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root row css-xy5ytf-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1rf00xl-MuiTableCell-root"
                            >
                              asset-name
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1rf00xl-MuiTableCell-root"
                            >
                              <p>
                                pim-link-document-title
                              </p>
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1rf00xl-MuiTableCell-root"
                            >
                              <a
                                class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-medium Button-text MuiIconButton-sizeLarge css-142qa0u-MuiButtonBase-root-MuiIconButton-root"
                                href="http://localhost/pim-link-document-id"
                                rel="noopener noreferrer"
                                tabindex="0"
                                target="_blank"
                              >
                                <svg
                                  class="css-154ktap"
                                  viewBox="0 0 32 32"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M28 2H10l-8 8v18a2.006 2.006 0 0 0 2 2h24a2.006 2.006 0 0 0 2-2V4a2.006 2.006 0 0 0-2-2Zm-4.12 8.54-6.96 6.96-2.41-2.41 6.96-6.96L18.34 5l8.65.01.01 8.65Z"
                                  />
                                </svg>
                                <span
                                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                                />
                              </a>
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1igsm02-MuiTableCell-root"
                            >
                              <span
                                class="css-1ytj21s"
                              >
                                -
                              </span>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <div
                  class="DocumentResultsFooter"
                >
                  <nav
                    aria-label="pagination navigation"
                    class="MuiPagination-root MuiPagination-text pagination docResultsFooterStyles-paginationRoot css-ys6i0r-MuiPagination-root"
                  >
                    <ul
                      class="MuiPagination-ul css-wjh20t-MuiPagination-ul"
                    >
                      <li>
                        <button
                          aria-label="Go to previous page"
                          class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-textPrimary Mui-disabled MuiPaginationItem-previousNext Pagination-root css-pwj54n-MuiButtonBase-root-MuiPaginationItem-root"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-g2z002-MuiSvgIcon-root-MuiPaginationItem-icon"
                            data-testid="NavigateBeforeIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                            />
                          </svg>
                        </button>
                      </li>
                      <li>
                        <button
                          aria-current="true"
                          aria-label="page 1"
                          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-textPrimary Mui-selected MuiPaginationItem-page Pagination-root css-pwj54n-MuiButtonBase-root-MuiPaginationItem-root"
                          tabindex="0"
                          type="button"
                        >
                          1
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </li>
                      <li>
                        <button
                          aria-label="Go to next page"
                          class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-textPrimary Mui-disabled MuiPaginationItem-previousNext Pagination-root css-pwj54n-MuiButtonBase-root-MuiPaginationItem-root"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-g2z002-MuiSvgIcon-root-MuiPaginationItem-icon"
                            data-testid="NavigateNextIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                            />
                          </svg>
                        </button>
                      </li>
                    </ul>
                  </nav>
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways clear-downloads Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
                    data-testid="anchor-link"
                    type="button"
                  >
                    <span>
                      MC: downloadList.clear
                    </span>
                  </a>
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-11nrv4h-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{\\"id\\":\\"download3-button1\\",\\"label\\":\\"MC: downloadList.download (0)\\",\\"action\\":\\"[]\\"}"
                    tabindex="0"
                    type="button"
                  >
                    MC: downloadList.download (0)
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                  <p
                    class="MuiTypography-root MuiTypography-body1 RecaptchaPrivacyLinks css-87ejlm-MuiTypography-root"
                    data-testid="typography"
                  >
                    This site is protected by reCAPTCHA and the Google 
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
                      data-testid="anchor-link"
                      href="https://policies.google.com/privacy"
                      rel="noreferrer noopener"
                      target="_blank"
                    >
                      <span>
                        Privacy Policy
                      </span>
                    </a>
                     and 
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
                      data-testid="anchor-link"
                      href="https://policies.google.com/terms"
                      rel="noreferrer noopener"
                      target="_blank"
                    >
                      <span>
                        Terms of Service
                      </span>
                    </a>
                     apply.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabLeadBlock tests should render the bimIframe tab 1`] = `
<div
  aria-labelledby="tab-four"
  class="MuiGrid-root MuiGrid-item Tabs-tabPanel css-j7mgek-MuiGrid-root"
  data-testid="tabpanel-four"
  heading="MC: sdp.tabs.bim"
  hidden=""
  id="tabpanel-four"
  role="tabpanel"
>
  <div
    class="Tabs-tabPanelBox MuiBox-root css-19kzrtu"
  >
    <div
      class="bimLeadBlock"
    >
      <div
        class="section Section-root Section-pearl css-cxq310"
      >
        <div
          class=" css-ze8cyt"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1kfapdf-MuiGrid-root"
              data-testid="grid"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8 css-3mvoze-MuiGrid-root"
                data-testid="grid-item"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
                  data-testid="typography"
                >
                  <h5
                    class="MuiTypography-root MuiTypography-h5 css-1mafjam-MuiTypography-root"
                    data-testid="typography"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h2 Typography-underline css-ta8c5q-MuiTypography-root"
                      data-testid="typography"
                    >
                      BIM_CODE
                    </h2>
                  </h5>
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
                  data-testid="typography"
                />
              </div>
              <iframe
                class="assetsIframe bmiIframe"
                data-testid="bmi-iframe"
                src="http://nowhere.com"
                title="BIM_CODE"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
